--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ font-family: 'Inter', sans-serif;
   height: calc(100vh - 86px)
  }
  .primary-heading{
-font-family: 'Oleo Script Swash Caps', cursive;
+  font-family: 'Oleo Script Swash Caps', cursive;
   font-weight: normal;
   font-size: 6rem;
   line-height: 100%;
@@ -141,6 +141,24 @@ font-family: 'Oleo Script Swash Caps', cursive;
   z-index: -200;
 }
 
+/* mobile navigation */
+
+.mobile-nav-btn{
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  background: none;
+  padding: 1rem 1.5rem;
+  border-radius: 8px;
+  box-shadow: 2px 4px 6px 0.2 rgba(0,0,0, 0.2);
+  background-color: #FFF9C6;
+  display: none;
+}
+.close{
+  display: none;
+}
+
 /* animations
 .bg-image-right{
   transform: translateX(-100%);
@@ -193,8 +211,7 @@ font-family: 'Oleo Script Swash Caps', cursive;
   .right-2,
   .right-3,
   .hero-ground,
-  .bg-image-bottom,
-  .nav-list{
+  .bg-image-bottom{
     display: none;
   }
   .section-hero{
@@ -254,5 +271,40 @@ font-family: 'Oleo Script Swash Caps', cursive;
     bottom: 0;
     right: 0;
     z-index: -1;
+  }
+  .nav-list{
+    position: absolute;
+    background-color:#fff ;
+    width: 100%;
+    display: flex;
+    top: 0;
+    height: 100vh;
+    z-index: 200;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+  }
+  .nav-li-items{
+    
+  }
+  .mobile-nav-btn{
+    display: block;
+    z-index: 200;
+  }
+  .mob-active .nav-list{
+    opacity: 1; 
+    pointer-events: all;
+    visibility: visible;
+  }
+  .active-li .close{
+    display: block;
+  }
+  .active-li .open{
+    display: none;
   }
 }
